v1.1.1/index.md
# Rhino [![Rhino logo](reference/figures/rhino.png)](https://appsilon.github.io/rhino/)

> *Build high quality, enterprise-grade
> [Shiny](https://shiny.rstudio.com/) apps at speed.*

## Upcoming events

Would you like to learn about Rhino hands-on? Join our events!

- August 23, 2022 at 11:00 AM (UTC-4): *Enterprise-grade Shiny App
  Development with {rhino}*. The workshop will be led by [Jakub
  Nowicki](https://www.linkedin.com/in/jakub-nowicki/) during the
  [R/Medicine](https://events.linuxfoundation.org/r-medicine/)
  conference.
- September 7, 2022 at 11:30 AM (UTC+1): *Introducing Rhino: Shiny
  application framework for enterprise*. The talk will be given by
  [Jakub Nowicki](https://www.linkedin.com/in/jakub-nowicki/) during the
  [EARL](https://www.ascent.io/earl) conference.

## Why Rhino?

Rhino allows you to create Shiny apps **The Appsilon Way** - like a
fullstack software engineer. Apply best software engineering practices,
modularize your code, test it well, make UI beautiful, and think about
user adoption from the very beginning. Rhino is an opinionated framework
with a focus on software engineering practices and development tools.

Rhino supports your work in 3 main areas:

1.  **Clear code**: scalable app architecture, modularization based on
    Box and Shiny modules.
2.  **Quality**: unit tests, E2E tests with Cypress, logging and
    monitoring, linting.
3.  **Automation**: project startup, CI with GitHub Actions, dependency
    management with renv, configuration management with config, Sass and
    JavaScript bundling with ES6 support via Node.js.

These features are often implemented using well-known packages. Rhino
brings them all working together out of the box!

Read more: [What is
Rhino?](https://appsilon.github.io/rhino/articles/explanation/what-is-rhino.html)

## Installation

Stable version:

``` r
install.packages("rhino")
```

Development version:

``` r
remotes::install_github("Appsilon/rhino")
```

## Documentation

[Rhino documentation](https://appsilon.github.io/rhino/) is divided into
four sections, accessible from the navigation bar at the top:

1.  [**Tutorial**](https://appsilon.github.io/rhino/articles/tutorial/create-your-first-rhino-app.html):
    Start here to learn the basics.
2.  **Explanation**: In-depth articles on Rhino machinery and its
    design.
3.  **How-to Guides**: Step-by-step instructions for common tasks.
4.  **Reference**: A list of Rhino functions with technical details.

------------------------------------------------------------------------

Developed with ❤️ at [Appsilon](https://appsilon.com). Get in touch:
<opensource@appsilon.com>.

Appsilon is a [**Full Service Certified RStudio
Partner**](https://www.rstudio.com/certified-partners/).

[![We are
hiring!](http://d2v95fjda94ghc.cloudfront.net/hiring.png)](https://appsilon.com/careers/)
